--- a/Encription/src/view/EncryptionForm.fxml
+++ b/Encription/src/view/EncryptionForm.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="conroller.EncryptionFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="conroller.EncryptionFormController">
+   <children>
+      <TextField fx:id="txtEntered" layoutX="45.0" layoutY="65.0" prefHeight="39.0" prefWidth="479.0" promptText="Enter Text" />
+      <Button layoutX="456.0" layoutY="156.0" mnemonicParsing="false" onAction="#enctriptOnAction" text="Encrypt" />
+      <TextField fx:id="txtEncrypted" layoutX="45.0" layoutY="225.0" prefHeight="39.0" prefWidth="479.0" promptText="Encrypted" />
+   </children>
 </AnchorPane>
